Version Number Follows Semantic Versioning 2.0.0
    https://semver.mdn.cn/

Attention:
    注意: 因为之前的仓库整体架构和构建操作等等的问题, 导致现在 PyPi 上面 1.0.0 和 3.1.1 已经被删除了, 但是 PyPi 的规则限制即使是删除之后也不能上传同一版本号的包上去, 所以更新的时候要注意.

Version:
    0.0.0:
        整体架构重置.
    1.0.1:
        跳过 1.0.0.
        更改包管理器为Poetry.
        重新打包上传.
    1.1.0:
        修复 LogManager 中错误的导入 [from src.pulucas... -> from pulucas].
        变更依赖 [pyfiglet -> art].
        修改 Function.Author_Lucas 的实现并标记为弃用.
        添加函数 Function.ASCII_Art.
        修改 Logmanager.Initialize 中关于 ASCII Art 生成部分的实现.
        为 Function 内的函数添加标准化的注释.
    1.1.1:
        这个版本上传之后出现无法 pip 到的问题, 遂改版本号为 1.1.2 重新上传一次.
    1.1.2:
        修复 Poetry 创建项目时忘记使用 poetry install 命令来进行基础配置导致的 src 无法缺省的bug.
    1.1.3
        为 LogManager 中 LogOutput 的参数 Level 添加候选.
        修复关于 from pylucas.Function import ... 无法导入的问题(通过在Function文件夹内新建__init__.py).
    1.1.4
        修复 Function 中 ASCII_Art 缺少返回值 -> LineCount 的问题.
        修复 Function 中 ASCII_Art 默认字体被硬编码的问题.
        修复 LogManager 中 Author 的 ASCII Art 无法自定义的问题.

        为 LogManager 添加注释.
        为 ConfigEditor 添加注释.